# ai-engineering-workspace

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
week1-python-foundation/: LEARNING_LOG.md  WEEK1_PROGRESS.md
week1-python-foundation/day1-small-functions/: README.md  test_utils.py  utils.py
week1-python-foundation/day2-oop/: README.md  bank_account.py  test_bank_account.py
week1-python-foundation/day3-typing/: README.md
week1-python-foundation/day4-advanced-pytest/: README.md  README_backup.md  calculator_test.py  external_api.py  test_external_api_monkeypatch.py  test_external_api_patch.py
week1-python-foundation/day5-csv-cli-challenge/: README.md
week1-python-foundation/day5-csv-cli-challenge/data/: people.csv
week1-python-foundation/day5-csv-cli-challenge/src/: main.py  summarizer.py
week1-python-foundation/day5-csv-cli-challenge/tests/: test_summary.py
week2-fastapi-production/day6-fastapi-fundamentals/: crud.py  database.py  main.py  models.py  test_fastapi.py
week2-fastapi-production/day7-dependency-injection-background/: README.md  pyproject.toml
week2-fastapi-production/day7-dependency-injection-background/src/: config.py  main.py  tasks.py
week2-fastapi-production/day7-dependency-injection-background/tests/: test_day2.py
week2-fastapi-production/day8-pagination-query-exceptions/: README.md  database.py  main.py  models.py  pyproject.toml
week3-llm-rag-final/day11-llm-retry-backoff/: llm_retry_backoff.py
week3-llm-rag-final/day12-13-embeddings-rag-pipeline/: llm.py  llm2.py  pyproject.toml  ui.py
week3-llm-rag-final/day12-13-embeddings-rag-pipeline/chromadb/: chroma.sqlite3
week3-llm-rag-final/day12-13-embeddings-rag-pipeline/football_chromadb/: chroma.sqlite3
week3-llm-rag-final/day14-evaluation/: pyproject.toml
week3-llm-rag-final/day14-evaluation/src/day14_evaluation/: evaluation.py
week3-llm-rag-final/day15-fastapi-llm/: main.py  rag.py  requirements.txt
