[project]
name = "ai-engineering-workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahsen",email = "ahsenkhalil37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
