[tool.poetry]
name = "week2-day8"
version = "0.1.0"
description = "Week 2 Day 8 – Pagination, Query Params, Exception Handlers"
authors = ["Ahsen"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
